--- a/career advice.html
+++ b/career advice.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="top">
-        <img src="logo.png" alt="logo">
+        <a href="index.html"><img src="logo.png" alt="logo"></a>
         <button> <a href="index.html">Go to Home</a></button>
    </div>
    <div class="a">
