--- a/get in touch.html
+++ b/get in touch.html
@@ -21,7 +21,7 @@
         <input type="text" name="name" placeholder="Full Name" required>
         <input type="email" name="email" placeholder="Email" required>
         <input type="text" name="comment" placeholder="Comment" required>
-        <input type="submit" name="submit" placeholder="Submit">
+        <input type="submit" name="submit">
     </form>
     <div class="bottom">
         <img src="logo.png" alt="logo">
