--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="titlebar">
-        <img src="logo.png" alt="logo">
+        <a href="index.html"> <img src="logo.png" alt="logo"></a>
         <ul>
-            <li><button class="b1"><a href="login.php">Sign up</a></button></li>
-            <li><button class="b2"><a href="#">Log in</a></button></li>
+            <li><button class="b1"><a href="signup.html">Sign up</a></button></li>
+            <li><button class="b2"><a href="login.html">Log in</a></button></li>
         </ul>
     </div>
     <div class="menubar">
@@ -20,16 +20,17 @@
             <li><a href="index.html">Find Jobs</a></li>
             <li><a href="#">Salary Tools</a></li>
             <li><a href="career advice.html">Career Advice</a></li>
-            <li><a href="https://www.resumehelp.com/landers/1?utm_source=google&utm_medium=cpc&utm_campaign=306565009&utm_term=resume-help&utm_placement=&utm_source=google&utm_medium=cpc&utm_keyword=resume-help&gclid=CjwKCAjwrqqSBhBbEiwAlQeqGo9RRYepV6bQ1q_inwMF5gUmY0GPBVhoobXEcwEvfxqLjG2gf6h5bBoCnjgQAvD_BwE">Resume Help</a></li>
+            <li><a href="#">Resume Help</a></li>
             <li><a href="#">Upload Resume</a></li>
+            <li><a href="post a job.html">Post a job</a></li> 
         </ul>
     </div>
     <div class="search">
         <h1>Find a career you'll love.</h1>
         <p style="margin-left: 28%;">Explore which careers have the highest job satisfaction, best salaries, and more</p>
         <form class="search-box">
-            <input type="text" name="job-title" placeholder="Job title, company, or keywords" required>
-            <input type="text" name="city" placeholder="Enter Location" required>
+            <input type="text" placeholder="Category"  required>
+            <input type="text" name="city" placeholder="Enter Location">
             <input type="submit" name="search-submit" value="Search Jobs">
         </form>
     </div>
